# University_Assignments

./: README.md
1st Year/COS1511/Assignment 1/: COS1511 Assignment 1.docx  assignment1.cpp
1st Year/COS1511/Assignment 2/: assignment2new.cpp
1st year/COS1511/Assignment 2/: COS1511 assignment 2.docx  Q5.txt  assignment2.cpp  c_cpp_properties.json
1st year/COS1511/Assignment 3/: COS1511 Assignment 3.docx  Question1.cpp  Question2.cpp  assignment3.cpp
1st year/COS1511/Assignment 4/: Assignment 4.docx  FlightSystem.cpp  New Text Document.txt  test.cpp
1st year/COS1512/Assignment 2/: Assignment 2.docx  Assignment2.cpp  Question1.cpp  Question3.cpp  Question4.cpp  Question5.cpp  Question6.cpp  question4inpfile.txt  question4outfile.txt
1st year/COS1512/Assignment 2/question3/: Q3.cpp
1st year/COS1512/Assignment 3/: COS1512 Assignment 3.docx  q5.txt
1st year/COS1512/Assignment 3/COS1512 Assignment 3/: Movie.h  Question1.cpp
1st year/COS1512/Assignment 4/: COS1512 Assignment 4.docx  Q1.cpp  Q3.cpp  Q4.cpp  Q5.cpp  q1.txt  q3.txt  tests.cpp
1st year/COS1512/Assignment 4/Q5/: test.cpp
2nd year/COS2611/Assignment 2/Question 1/: 69234175_COS2611_02_Q1.cpp  COS211_AS2_Skeleton.cpp
2nd year/COS2614/: A1Q1.txt
2nd year/COS2614/Codeblocks/Tests/: Untitled1.c  Untitled1.cpp
2nd year/COS2614/Hello/: main.cpp
2nd year/COS2614/build-Hello-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
3rd year/COS3711/Assignment 1/Question1&2/Question1&2/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  reviewdata.cpp  reviewdata.h
(+541 files in other folders)
